# agent-skills-project

./: .gitignore  README.md
command-packages/pypi/agent-upd/: pyproject.toml
command-packages/pypi/command-upd/: pyproject.toml
command-packages/pypi/create-agent-skill-repo/: pyproject.toml
command-packages/pypi/skill-upd/: pyproject.toml
command-packages/pypi/upd-agent/: pyproject.toml
command-packages/pypi/upd-agent-skill/: pyproject.toml
command-packages/pypi/upd-command/: pyproject.toml
command-packages/pypi/upd-skill/: pyproject.toml
command-packages/pypi/upd-skill/src/upd_skill/: __init__.py
command-packages/pypi/upd-slash-command/: pyproject.toml
command-packages/pypi/upd-subagent/: pyproject.toml
docs/: index.html
src/agent-skills-upd/: pyproject.toml
src/agent-skills-upd/agent_skills_upd/: __init__.py  fetcher.py
src/agent-skills-upd/agent_skills_upd/cli/: agent.py  command.py  common.py  skill.py
src/agent-skills-upd/tests/: test_cli_skill.py  test_integration.py
