[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "create-agent-skill-repo"
version = "0.0.5"
description = "Create a personal agent-resources repository for Claude Code, Codex, OpenCode, Amp, Clawdbot and others."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["agent-skills-upd>=0.0.5"]

[project.scripts]
create-agent-skill-repo = "agent_skills_upd.cli.create:app"

[tool.hatch.build.targets.wheel]
packages = ["src/create_agent_skills_repo"]
