[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skill-upd"
version = "0.0.5"
description = "Update Claude Code skills from GitHub to your project"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["agent-skills-upd>=0.0.2"]

[project.scripts]
skill-upd = "agent_skills_upd.cli.skill:app"

[tool.hatch.build.targets.wheel]
packages = ["src/skill_upd"]
