[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "upd-agent"
version = "0.0.10"
description = "Update Claude Code sub-agents from GitHub to your project"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["agent-skills-upd>=0.0.5"]

[project.scripts]
upd-agent = "agent_skills_upd.cli.agent:app"

[tool.hatch.build.targets.wheel]
packages = ["src/upd_agent"]
