[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "upd-command"
version = "0.0.5"
description = "Update Claude Code slash commands from GitHub to your project"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["agent-skills-upd>=0.0.5"]

[project.scripts]
upd-command = "agent_skills_upd.cli.command:app"

[tool.hatch.build.targets.wheel]
packages = ["src/upd_command"]
