[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "upd-skill"
version = "0.0.6"
description = "CLI tool for updating Claude Code, Codex, OpenCode, Amp, Clawdbot agent skills."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["agent-skills-upd>=0.0.2"]

[project.scripts]
upd-skill = "agent_skills_upd.cli.skill:app"

[tool.hatch.build.targets.wheel]
packages = ["src/upd_skill"]
