[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "upd-slash-command"
version = "0.0.10"
description = "CLI tool for updating Claude Code slash commands from git."
requires-python = ">=3.10"
license = "MIT"
keywords = ["claude", "claude-code", "ai", "agent", "slash-command"]

[project.urls]
Repository = "https://upd.dev/skills/agent-skills-project"

[tool.hatch.build.targets.wheel]
packages = ["src/upd_slash_command"]
